--- a/message.html
+++ b/message.html
@@ -5,6 +5,33 @@
     <title>Welcome to ODU eVENTATION</title>
   </head>
   <body>
+<!--Log in form-->
+<h1>Log In</h1>
+
+
+    <form action= "messdb.php" method="post" >
+      <table>
+        <tr>
+          <th colspan="2"><h3 align='center'>Post a Message</h3> </th>
+        </tr>
+        <tr>
+        <td>Username:</td>
+        <td><input type="text" name="username" id="uname" placeholder="@user"></td>
+
+        </tr>
+        <tr>
+        <td>Password:</td>
+        <td><input type="password" name="password" id="pword" placeholder="Password"></td>
+
+        </tr>
+        <tr>
+          <td align = "right" colspan="2"><input type="submit" name="submit" value="Submit"></td>
+        </tr>
+      </table>
+    </form>
+
+  </body>
+</html>
 
     <!--
     // echo ($_POST["uname"]);
@@ -28,9 +55,7 @@
     // }
      -->
 
-<!--Log in form-->
-<h1>Log In</h1>
- <?php //error for wrong input
+<!-- <?php //error for wrong input
 // if (isset($_GET['error'])) {
 //   if (isset($_GET['error']=='emptyfields')) {  //check for empty fields
 //   echo '<p class = "signuperror">Fill emtpy fields!</p>';
@@ -40,28 +65,4 @@
 // elseif ($_GET['signin']=="success") {
 //   // code...
 // }
- ?>
-
-    <form action= "login.php" method="post" >
-      <table>
-        <tr>
-          <th colspan="2"><h3 align='center'>Enter Creds</h3> </th>
-        </tr>
-        <tr>
-        <td>Username:</td>
-        <td><input type="text" name="username" id="uname" placeholder="@user"></td>
-
-        </tr>
-        <tr>
-        <td>Password:</td>
-        <td><input type="password" name="password" id="pword" placeholder="Password"></td>
-
-        </tr>
-        <tr>
-          <td align = "right" colspan="2"><input type="submit" name="submit" value="Submit"></td>
-        </tr>
-      </table>
-    </form>
-
-  </body>
-</html>
+?> -->
