--- a/help.html
+++ b/help.html
@@ -7,14 +7,12 @@
   </head>
   <body>
 
-<!-- <h1>Log In</h1> -->
-
-
      <header>
        <div class="container">
 
          <nav>
            <ul>
+
              <li class="sansserif"><a href="index.php">Home</a></li>
              <li><a href="index.php">Log-In</a></li>
              <li><a href="signup.php">Sign-Up</a></li>
@@ -25,45 +23,14 @@
          </nav>
        </div>
 
-
      </header>
 
-    <form action= "login.php" method="post" >
+
       <div id="login-box">
+        <h1 align=center>Thanks For Waiting</h1>
 
-        <div class="left-box">
-          <h1>Login</h1>
-
-
-              <h3>Enter Creds</h3>
-                <input type="text" name="username" id="uname" placeholder="@Username">
-                <input type="password" name="password" id="pword" placeholder="Password">
-                <input type="submit" name="submit" value="Submit">
-
-
-        </div>
-
-        <!-- <div class="right-box">
-              <h1>Sign Up</h1>
-
-            <input type="text" name="username" id="uname" placeholder="@user">
-
-              <input type="password" name="password" id="pword" placeholder="Password">
-
-            <input type="password" name="passwordrep" id="pword" placeholder="Retype Password">
-
-              <input type="text" name="Email" id="email" placeholder="Email">
-
-              <input type="text" name="firstname" id="fname" placeholder="First Name">
-
-              <<input type="text" name="lastname" id="lname" placeholder="Last Name">
-              <input type="submit" name="submit" value="Submit">
-
-        </div> -->
       </div>
-    </form>
-
-  </body>
+    </body>
 </html>
 <!--
       <table>
